uodate dataset config on kaggle

--- a/gongzong/dataset_kaggle.yaml
+++ b/gongzong/dataset_kaggle.yaml
@@ -8,7 +8,7 @@
 #     └── coco128  ← downloads here (7 MB)
 
 # Train/val/test sets as 1) dir: path/to/imgs, 2) file: path/to/imgs.txt, or 3) list: [path/to/imgs1, path/to/imgs2, ..]
-path: /home/neolux/Desktop/Gongzong/datasets/mergen # dataset root dir
+path: /kaggle/working/dataset # dataset root dir
 train: images # train images (relative to 'path') 128 images
 val: images # val images (relative to 'path') 128 images
 test: # test images (optional)
@@ -23,4 +23,4 @@ names:
   5: bcf
 
 # Download script/URL (optional)
-#download: https://github.com/ultralytics/assets/releases/download/v0.0.0/coco128.zip
+download: https://github.com/neoluxis/2024-Haikesikang-Ultralytics/releases/download/10.13/heikskon.zip
